<resources>
    <string name="app_name">SurFin</string>

    <!--    toolbar-->
    <string name="weather">搜尋天氣</string>
    <string name="account">個人</string>
    <string name="emergency">緊急救難</string>
    <string name="explore">探索</string>
    <string name="activity_history">運動日誌</string>
    <string name="collection">收藏清單</string>


    <!--    home-->
    <string name="recommended_spots">推薦地點</string>
    <string name="search_spots">搜尋地點</string>


    <!--    weather-->
    <string name="tide_title">潮汐</string>
    <string name="degree">°C</string>
    <string name="ms">m/s</string>
    <string name="m">m</string>

    <string name="uvi_low">低量級，無需特別注意防曬</string>
    <string name="uvi_mod">中量級，須做好防曬措施、避免長時間曝曬</string>
    <string name="uvi_high">高量級，須做好防曬措施、避免長時間曝曬</string>
    <string name="uvi_over">過量級，請盡量避免室外活動</string>
    <string name="uvi_extreme">危量級，請盡量避免室外活動</string>



    <!--    emergency-->
    <string name="call_118">撥打 118 海巡署</string>
    <string name="call_112">撥打 112 救難專線</string>
    <string name="call_119">撥打 119</string>
    <string name="emergency_hint">點擊下方按鈕後\n跳轉撥號頁面</string>
    <string name="locate_myself">我的定位</string>


    <!--    add history-->
    <string name="input_location_title">請輸入地點</string>
    <string name="input_date">請選擇日期</string>
    <string name="input_content">請輸入內容</string>
    <string name="input_heart_rate">請輸入心率</string>
    <string name="input_time_duration">請輸入時長</string>
    <string name="input_calories">請輸入消耗卡路里</string>
    <string name="bpm">%s bpm</string>
    <string name="kcal">%s kcal</string>

    <!--    edit-->
    <string name="delete">刪除</string>
    <string name="submit">送出</string>

    <!--    account-->
    <string name="provide_spots">提供浪點</string>
    <string name="contact_us">聯絡我們</string>

    <!--    dialog-->
    <string name="edit_name">更改姓名</string>
    <string name="recommendation">提供建議</string>
    <string name="report_problem">問題回報</string>
    <string name="other">其他</string>
    <string name="recommend_spot">請輸入推薦浪點</string>
    <string name="please_enter_your_name">請填入稱謂</string>
    <string name="please_enter_email">請填入電子郵件</string>
    <string name="please_enter_address">請輸入浪點地址</string>
    <string name="please_eneter_your_name">請輸入名字</string>
    <string name="no_collection_hint">尚無收藏浪點</string>
    <string name="no_history_hint">尚無運動日誌</string>


<!--    weather value-->
    <string name="sunny">晴</string>
    <string name="sunny_cloud">多雲</string>
    <string name="cloudy">陰</string>
    <string name="cloudy_rain">多雲有雨</string>
    <string name="rainy">陰有雨</string>

</resources>