<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginHorizontal="20dp"
    android:background="@color/transparent"
    app:cardCornerRadius="20dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/primary_darker_gray"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/option_1"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation" />

            <com.google.android.material.chip.Chip
                android:id="@+id/option_2"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_problem" />

            <com.google.android.material.chip.Chip
                android:id="@+id/option_3"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />


        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/chip_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:hint="@string/please_enter_your_name"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:hint="@string/please_enter_email"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_us_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_contact_us"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:gravity="top"
                android:hint="@string/input_content"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_round"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/contact_us_layout"
            app:layout_constraintStart_toStartOf="@id/contact_us_layout"
            app:layout_constraintTop_toBottomOf="@id/contact_us_layout"
            tools:text="送出" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
