<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginHorizontal="20dp"
    android:background="@color/transparent"
    app:cardCornerRadius="20dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_name"
            android:textAlignment="center"
            android:textColor="@color/primary_darker_gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/account_name_layout"
            app:layout_constraintStart_toStartOf="@id/account_name_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/please_eneter_your_name"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_round"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/account_name_layout"
            app:layout_constraintStart_toStartOf="@id/account_name_layout"
            app:layout_constraintTop_toBottomOf="@id/account_name_layout"
            tools:text="submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>