<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.surfin.history.EditViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".history.AddHistoryDialog">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/input_date" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageButton
                android:id="@+id/btn_select_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_calendar_month_24"
                app:layout_constraintBottom_toBottomOf="@id/date_layout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/date_layout"
                app:layout_constraintTop_toTopOf="@id/date_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/date_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_location_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_location_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heart_rate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/location_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_heart_rate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_heart_rate" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_duration_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/heart_rate_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_time_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_time_duration" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calories_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/time_duration_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_calories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_calories" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintBottom_toTopOf="@id/btn_submit"
                app:layout_constraintHeight_min="250dp"
                app:layout_constraintTop_toBottomOf="@id/calories_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/input_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/btn_submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.1" />

            <ImageButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_delete"
                app:layout_constraintWidth_percent="0.1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>